--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
-[build-system]
-build-backend = "setuptools.build_meta"
-requires = ["setuptools", "wheel"]
+[project]
+name = "mypackage"
+version = "0.0.1"
+dependencies = [
+    "Jinja2",
+]
+
+[project.scripts]
+cli-name = "src.main:main"
+
+[tool.setuptools]
+packages = ["src"]
+
+[tool.setuptools.package-data]
+mypkg = [".j2", "templates/*.j2"]
